--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,5 @@
 /* Without changing anything in the html, add the following styles using advanced selectors */
-
+@import url("https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@500&display=swap");
 
 /* Give the header element a background color */
 header {
@@ -60,12 +60,12 @@ a[href*="#comments"]:hover {
 }
 
 /* All Post's Author's Links Bold and Blue, with no Underline */
-a[href*="author"] {
+article h3 a {
     font-weight: bold;
     color: blue;
     text-decoration: none;
 }
-/* ?? */
+
 
 /* Article Paragraph Text should have line height of 200% */
 article p {
@@ -85,23 +85,26 @@ article img:first-of-type {
 }
 
 /* The First Top Cat Section (check the bottom of the HTML file) should have a Golden Background */
-.top-cat:nth-of-type(1) {
+#top-cats section:nth-of-type(1) {
     background-color: gold;
 }
 /* ?? */
 
 /* The 2nd Top Cat Section Should have a Silver/gray Background */
-.top-cat:nth-of-type(2) {
+#top-cats section:nth-of-type(2) {
     background-color: silver;
 }
-/* ?? */
+
 
 /* The 3rd-Most Top Cat Should have a Bronze/brown Background
    Note: the HTML for this one is a little odd! This is intentional! */
 
+#top-cats~section {
+    background-color: brown;
+}
 /* Every other Article's Post-Content Background Color to a Light Grey */
-article p {
-      background-color: #f5f5f5;
+article:nth-of-type(2n) .post-content {
+    background-color: lightgray;
 }
 
 /* All Top Kitten's Profile Photos Rounded */
@@ -111,20 +114,18 @@ article p {
 /* ** BONUS ** */
 
 /* Add a cat emoji before a Cat's Name (in the heading content)*/
-.top-kitten h2::before {
-    content: "🐱 ";
+article h3 a::before {
+    content: "🐱";
 }
-/* ?? */
 
 /* Top-most Top Cat has a trophy emoji before name */
-.top-cat:nth-of-type(1) h2::before {
-    content: "🏆 ";
+#top-cats section:nth-of-type(1) h3::before {
+    content: "🏆";
 }
-/* ?? */
 
 /* Use Google Fonts to change h1 & h2 fonts to Roboto Slab */
-@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;700&display=swap');
-h1, h2 {
-    font-family: 'Roboto Slab', serif;
+
+h1,
+h2 {
+    font-family: "Roboto Slab", serif;
 }
-/* ?? */
